force-app/main/default/objects/cgcloud__Substitution__c/cgcloud__Substitution__c.object-meta.xml
<CustomObject>
    <description>The use case holds the details of the substitute object used to to specify the basis of a substitution based on a substitution period and user.</description>
    <label>Substitution</label>
    <nameField>
        <displayFormat>S-{000000000}</displayFormat>
        <label>Substitution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Substitutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>