force-app/main/default/objects/cgcloud__Substitution__c/fields/cgcloud__Account__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the customer.</description>
    <label>Customer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Customer and the Substitution must have the same Sales Org.</errorMessage>
        <filterItems>
            <field>Account.cgcloud__Sales_Org__c</field>
            <operation>equals</operation>
            <valueField>$Source.cgcloud__Sales_Org__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Substitutions</relationshipLabel>
    <relationshipName>Substitutions</relationshipName>
    <type>Lookup</type>
</CustomField>