force-app/main/default/objects/cgcloud__Substitution__c/fields/cgcloud__Follow_Up_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Follow_Up_Time__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Follow up time (number of days) of the substitution.</description>
    <label>Follow Up Time</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>