force-app/main/default/objects/cgcloud__Substitution__c/fields/cgcloud__Substitute__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Substitute__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the substitute user.</description>
    <label>Substitute</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Substitutions1</relationshipName>
    <type>Lookup</type>
</CustomField>