force-app/main/default/objects/cgcloud__Substitution__c/fields/cgcloud__Substituted__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Substituted__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the user who the substitution is planned for.</description>
    <label>Substituted</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Substitutions</relationshipName>
    <type>Lookup</type>
</CustomField>