force-app/main/default/objects/cgcloud__Substitution__c/fields/cgcloud__Substitution__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Substitution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the substitution with which the substitution item record is related.</description>
    <label>Substitution</label>
    <referenceTo>cgcloud__Substitution__c</referenceTo>
    <relationshipLabel>Substitution Customers</relationshipLabel>
    <relationshipName>Substitutions</relationshipName>
    <type>Lookup</type>
</CustomField>