force-app/main/default/objects/cgcloud__Substitution__c/fields/cgcloud__Substitution_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Substitution_Type__c</fullName>
    <label>Substitution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vacation</fullName>
                <default>true</default>
                <label>Vacation</label>
            </value>
            <value>
                <fullName>Sickness</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>