force-app/main/default/objects/cgcloud__Substitution__c/fields/cgcloud__Valid_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Valid_Thru__c</fullName>
    <defaultValue>DATE(2999,12,31)</defaultValue>
    <description>Last date of validity period of the customer substitution</description>
    <label>Valid Thru</label>
    <type>Date</type>
</CustomField>