force-app/main/default/objects/cgcloud__Substitution__c/recordTypes/cgcloud__Substitution.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Substitution</fullName>
    <active>true</active>
    <description>Technically used to specify if the record is either &apos;Substitution&apos; or &apos;Substitution Item</description>
    <label>Substitution</label>
</RecordType>