force-app/main/default/objects/cgcloud__Substitution__c/recordTypes/cgcloud__Substitution_Customer.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Substitution_Customer</fullName>
    <active>true</active>
    <label>Substitution Customer</label>
</RecordType>