force-app/main/default/objects/cgcloud__Substitution__c/recordTypes/cgcloud__Substitution_Read_Only.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Substitution_Read_Only</fullName>
    <active>true</active>
    <label>Substitution_Read_Only</label>
</RecordType>