force-app/main/default/objects/cgcloud__Substitution__c/validationRules/cgcloud__Follow_up_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Follow_up_Time</fullName>
    <active>true</active>
    <description>The Follow Up Time must be a number equal or greater than 0.</description>
    <errorConditionFormula>AND(cgcloud__Follow_Up_Time__c &lt; 0)</errorConditionFormula>
    <errorMessage>The Follow Up Time must be a number equal or greater than 0.</errorMessage>
</ValidationRule>