force-app/main/default/objects/cgcloud__Substitution__c/validationRules/cgcloud__Lead_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Lead_Time</fullName>
    <active>true</active>
    <description>The Lead Time must be a number equal or greater than 0.</description>
    <errorConditionFormula>AND(cgcloud__Lead_Time__c &lt; 0)</errorConditionFormula>
    <errorMessage>The Lead Time must be a number equal or greater than 0.</errorMessage>
</ValidationRule>