force-app/main/default/objects/cgcloud__Substitution__c/validationRules/cgcloud__Valid_from_and_valid_thru.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Valid_from_and_valid_thru</fullName>
    <active>true</active>
    <description>Valid From can&apos;t be later than Valid Thru.</description>
    <errorConditionFormula>NOT(
    OR(
        AND(ISBLANK(cgcloud__Valid_From__c),ISBLANK(cgcloud__Valid_Thru__c)),
        AND(NOT ISBLANK(cgcloud__Valid_From__c),NOT ISBLANK(cgcloud__Valid_Thru__c),(cgcloud__Valid_From__c &lt;= cgcloud__Valid_Thru__c))
       )
    )</errorConditionFormula>
    <errorMessage>Valid From can&apos;t be later than Valid Thru.</errorMessage>
</ValidationRule>