force-app/main/default/objects/cgcloud__Substitution__c/listViews/cgcloud__Substitutions.listView-meta.xml
<ListView>
    <fullName>cgcloud__Substitutions</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>cgcloud__Active__c</columns>
    <columns>cgcloud__Description__c</columns>
    <columns>cgcloud__Substituted__c</columns>
    <columns>cgcloud__Substitution_Type__c</columns>
    <columns>cgcloud__Lead_Time__c</columns>
    <columns>cgcloud__Valid_From__c</columns>
    <columns>cgcloud__Valid_Thru__c</columns>
    <columns>cgcloud__Follow_Up_Time__c</columns>
    <columns>cgcloud__Sales_Org__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>cgcloud__Substitution__c.cgcloud__Substitution</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>cgcloud__Substitution__c.cgcloud__Substitution_Customer</value>
    </filters>
    <label>Substitutions</label>
    <language>en_US</language>
</ListView>